[package]
name = "bgmtv"
version = "0.1.0"
authors = ["CircuitCoder <circuitcoder0@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
serde = "1.0.82"
serde_derive = "1.0.82"
hyper = "0.12.19"
futures = "0.1.25"
tokio = "0.1.13"
url = "1.7.2"
chrono = { version="0.4.6", features=["serde"] }
failure = "0.1.3"
dirs = "1.0.4"
colored = "1.6.1"
clap = "2.32.0"
serde_yaml = "0.8.8"
termion = "1.5.1"
tui = "0.3.0"
crossbeam-channel = "0.3.4"
unicode-segmentation = "1.1.0"
unicode-width = "0.1.5"

[[bin]]
name = "bgmtty"
path = "src/bin.rs"

[lib]
name = "bgmtv"
path = "src/lib.rs"
