[package]
name = "bgmtv"
version = "0.1.0"
authors = ["CircuitCoder <circuitcoder0@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
serde = "1.0.82"
serde_derive = "1.0.82"
hyper = "0.12.19"
futures = "0.1.25"
tokio = "0.1.13"
url = "1.7.2"
chrono = { version="0.4.6", features=["serde"] }
failure = "0.1.3"
itertools = "0.8.0"

[lib]
name = "bgmtv"
path = "src/lib.rs"
