[package]
name = "bgmtty"
version = "0.1.0"
authors = ["CircuitCoder <circuitcoder0@gmail.com>"]
edition = "2018"

[dependencies]
bgmtv = { path="../" }
futures = "0.1.25"
failure = "0.1.3"
tokio = "0.1.13"
dirs = "1.0.4"
colored = "1.6.1"
clap = "2.32.0"
serde_yaml = "0.8.8"
termion = "1.5.1"
tui = "0.3.0"
crossbeam-channel = "0.3.4"
unicode-segmentation = "1.1.0"
unicode-width = "0.1.5"
tempfile = "3.0.5"
itertools = "0.8.0"

[[bin]]
name = "bgmtty"
path = "src/bin.rs"

[patch.crates-io]
termion = { git = "https://gitlab.redox-os.org/Jezza/termion", branch = "windows-support" }
